[package]
name = "latticg_rs"
version = "0.1.0"
authors = ["Neil <neilhube12@gmail.com"]
edition = "2018"
description="LattiCG but in Rust"
categories=["algorithms","data-structures"]
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.3"
num-traits = "0.2.14"
num-integer = "0.1.44"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3


[[bin]]
name = "latticg_example"
path = "src/main.rs"

[lib]
name = "latticg"
path = "src/lib.rs"